--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -14,11 +14,10 @@ concurrency:
 jobs:
   duckdb-stable-build:
     name: Build extension binaries
-    uses: samansmink/extension-ci-tools/.github/workflows/_extension_distribution.yml@add-c-makefile-2
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
     with:
       duckdb_version: v1.1.3
-      ci_tools_version: add-c-makefile-2
-      override_ci_tools_repository: samansmink/extension-ci-tools
+      ci_tools_version: main
       extension_name: capi_quack
       extra_toolchains: python3
       exclude_archs: 'wasm_mvp;wasm_eh;wasm_threads'
