--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,19 @@ cmake_minimum_required(VERSION 2.8)
 ###
 # Configuration
 ###
-if(NOT DEFINED TARGET_DUCKDB_VERSION_MAJOR OR
-        NOT DEFINED TARGET_DUCKDB_VERSION_MINOR OR
-        NOT DEFINED TARGET_DUCKDB_VERSION_PATCH)
-    message(FATAL_ERROR "DuckDB target version is required")
-endif()
 if(NOT DEFINED EXTENSION_NAME)
     message(FATAL_ERROR "DuckDB extension name is required")
 endif()
-add_definitions(-DDUCKDB_EXTENSION_API_VERSION_MAJOR=${TARGET_DUCKDB_VERSION_MAJOR})
-add_definitions(-DDUCKDB_EXTENSION_API_VERSION_MINOR=${TARGET_DUCKDB_VERSION_MINOR})
-add_definitions(-DDUCKDB_EXTENSION_API_VERSION_PATCH=${TARGET_DUCKDB_VERSION_PATCH})
+if (DEFINED TARGET_DUCKDB_VERSION_MAJOR)
+    add_definitions(-DDUCKDB_EXTENSION_API_VERSION_MAJOR=${TARGET_DUCKDB_VERSION_MAJOR})
+endif()
+if (DEFINED TARGET_DUCKDB_VERSION_MINOR)
+    add_definitions(-DDUCKDB_EXTENSION_API_VERSION_MINOR=${TARGET_DUCKDB_VERSION_MINOR})
+endif()
+if (DEFINED TARGET_DUCKDB_VERSION_PATCH)
+    add_definitions(-DDUCKDB_EXTENSION_API_VERSION_PATCH=${TARGET_DUCKDB_VERSION_PATCH})
+endif()
+
 add_definitions(-DDUCKDB_EXTENSION_NAME=${EXTENSION_NAME})
 
 if (DEFINED DUCKDB_EXTENSION_API_VERSION_UNSTABLE)
