--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -13,10 +13,20 @@ concurrency:
 
 jobs:
   duckdb-stable-build:
+    if: false
     name: Build extension binaries
     uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
     with:
       duckdb_version: v1.1.3
+      ci_tools_version: main
+      extension_name: capi_quack
+      extra_toolchains: python3
+
+  duckdb-latest-build:
+    name: Build extension binaries
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    with:
+      duckdb_version: main
       ci_tools_version: main
       extension_name: capi_quack
       extra_toolchains: python3
