--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -12,21 +12,11 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  duckdb-stable-build:
-    if: false
+  duckdb-build:
     name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@v1.2.0
     with:
-      duckdb_version: v1.1.3
-      ci_tools_version: main
-      extension_name: capi_quack
-      extra_toolchains: python3
-
-  duckdb-latest-build:
-    name: Build extension binaries
-    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
-    with:
-      duckdb_version: main
-      ci_tools_version: main
+      duckdb_version: v1.2.0
+      ci_tools_version: v1.2.0
       extension_name: capi_quack
       extra_toolchains: python3
